--- a/Sources/Sample/Sample.csproj
+++ b/Sources/Sample/Sample.csproj
@@ -47,8 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigReader.cs" />
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="IConfigReader.cs" />
     <Compile Include="IDateWriter.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="IOutput.cs" />
+    <Compile Include="MyComponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleOutput .cs" />
