--- a/Sources/Sample/Sample.csproj
+++ b/Sources/Sample/Sample.csproj
@@ -51,6 +51,8 @@
     <Compile Include="B.cs" />
     <Compile Include="ConfigReader.cs" />
     <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="CreditCard.cs" />
+    <Compile Include="GoldCard.cs" />
     <Compile Include="IConfigReader.cs" />
     <Compile Include="IDateWriter.cs" />
     <Compile Include="ILogger.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleOutput .cs" />
+    <Compile Include="StandartCard.cs" />
     <Compile Include="TodayWriter.cs" />
   </ItemGroup>
   <ItemGroup>
