--- a/Sources/Sample/Sample.csproj
+++ b/Sources/Sample/Sample.csproj
@@ -57,11 +57,14 @@
     <Compile Include="IDateWriter.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="IOutput.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="MyComponent.cs" />
+    <Compile Include="NHibernateRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleOutput .cs" />
     <Compile Include="StandartCard.cs" />
+    <Compile Include="Task.cs" />
     <Compile Include="TodayWriter.cs" />
   </ItemGroup>
   <ItemGroup>
