--- a/Sources/Sample/Sample.csproj
+++ b/Sources/Sample/Sample.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleOutput .cs" />
+    <Compile Include="ResolvingServices\ALazy.cs" />
     <Compile Include="StandartCard.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TodayWriter.cs" />
