--- a/Sources/Sample/Sample.csproj
+++ b/Sources/Sample/Sample.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ResolvingServices\ADependency.cs" />
     <Compile Include="AModule.cs" />
     <Compile Include="B.cs" />
+    <Compile Include="ResolvingServices\AOwned.cs" />
     <Compile Include="ResolvingServices\BDependency.cs" />
     <Compile Include="BModule.cs" />
     <Compile Include="ConfigReader.cs" />
